--- a/package.json
+++ b/package.json
@@ -1,7 +1,246 @@
 {
+  "name": "teamprofilegenerator",
+  "version": "1.0.0",
+  "description": "",
+  "main": "app.js",
+  "directories": {
+    "lib": "lib",
+    "test": "test"
+  },
   "dependencies": {
+    "ansi-regex": "^5.0.1",
+    "ansi-escapes": "^4.3.2",
+    "anymatch": "^3.1.2",
+    "ansi-styles": "^4.3.0",
+    "babel-plugin-jest-hoist": "^29.2.0",
+    "babel-jest": "^29.3.1",
+    "argparse": "^1.0.10",
+    "babel-preset-jest": "^29.2.0",
+    "babel-plugin-istanbul": "^6.1.1",
+    "balanced-match": "^1.0.2",
+    "bl": "^4.1.0",
+    "base64-js": "^1.5.1",
+    "brace-expansion": "^1.1.11",
+    "braces": "^3.0.2",
+    "browserslist": "^4.21.4",
+    "buffer": "^5.7.1",
+    "babel-preset-current-node-syntax": "^1.0.1",
+    "bser": "^2.1.1",
+    "buffer-from": "^1.1.2",
+    "callsites": "^3.1.0",
+    "caniuse-lite": "^1.0.30001431",
+    "camelcase": "^5.3.1",
+    "chalk": "^4.1.2",
+    "char-regex": "^1.0.2",
+    "cjs-module-lexer": "^1.2.2",
+    "ci-info": "^3.5.0",
+    "cli-cursor": "^3.1.0",
+    "cli-width": "^3.0.0",
+    "cliui": "^8.0.1",
+    "cli-spinners": "^2.7.0",
+    "chardet": "^0.7.0",
+    "clone": "^1.0.4",
+    "co": "^4.6.0",
+    "collect-v8-coverage": "^1.0.1",
+    "concat-map": "^0.0.1",
+    "convert-source-map": "^2.0.0",
+    "color-convert": "^1.9.3",
+    "cross-spawn": "^7.0.3",
+    "debug": "^4.3.4",
+    "defaults": "^1.0.4",
+    "dedent": "^0.7.0",
+    "color-name": "^1.1.3",
+    "deepmerge": "^4.2.2",
+    "diff-sequences": "^29.3.1",
+    "detect-newline": "^3.1.0",
+    "emittery": "^0.13.1",
+    "electron-to-chromium": "^1.4.284",
+    "error-ex": "^1.3.2",
+    "emoji-regex": "^8.0.0",
+    "escape-string-regexp": "^1.0.5",
+    "exit": "^0.1.2",
+    "escalade": "^3.1.1",
+    "esprima": "^4.0.1",
+    "execa": "^5.1.1",
+    "expect": "^29.3.1",
+    "external-editor": "^3.1.0",
+    "figures": "^3.2.0",
+    "fast-json-stable-stringify": "^2.1.0",
+    "fb-watchman": "^2.0.2",
+    "find-up": "^4.1.0",
+    "fsevents": "^2.3.2",
+    "fill-range": "^7.0.1",
+    "gensync": "^1.0.0-beta.2",
+    "get-package-type": "^0.1.0",
+    "function-bind": "^1.1.1",
+    "glob": "^7.2.3",
+    "get-stream": "^6.0.1",
+    "get-caller-file": "^2.0.5",
+    "globals": "^11.12.0",
+    "graceful-fs": "^4.2.10",
+    "human-signals": "^2.1.0",
+    "has": "^1.0.3",
+    "has-flag": "^4.0.0",
+    "fs.realpath": "^1.0.0",
+    "imurmurhash": "^0.1.4",
+    "html-escaper": "^2.0.2",
+    "iconv-lite": "^0.4.24",
+    "import-local": "^3.1.0",
+    "ieee754": "^1.2.1",
     "inquirer": "^8.2.5",
-    "jest": "^29.3.1"
-  }
-  
+    "inherits": "^2.0.4",
+    "is-fullwidth-code-point": "^3.0.0",
+    "is-generator-fn": "^2.1.0",
+    "is-core-module": "^2.11.0",
+    "inflight": "^1.0.6",
+    "is-arrayish": "^0.2.1",
+    "is-number": "^7.0.0",
+    "is-stream": "^2.0.1",
+    "isexe": "^2.0.0",
+    "is-unicode-supported": "^0.1.0",
+    "istanbul-lib-instrument": "^5.2.1",
+    "istanbul-lib-coverage": "^3.2.0",
+    "is-interactive": "^1.0.0",
+    "istanbul-lib-source-maps": "^4.0.1",
+    "istanbul-reports": "^3.1.5",
+    "jest-changed-files": "^29.2.0",
+    "jest-circus": "^29.3.1",
+    "jest-cli": "^29.3.1",
+    "istanbul-lib-report": "^3.0.0",
+    "jest-config": "^29.3.1",
+    "jest-each": "^29.3.1",
+    "jest-diff": "^29.3.1",
+    "jest-docblock": "^29.2.0",
+    "jest-environment-node": "^29.3.1",
+    "jest-haste-map": "^29.3.1",
+    "jest-get-type": "^29.2.0",
+    "jest-matcher-utils": "^29.3.1",
+    "jest-leak-detector": "^29.3.1",
+    "jest-mock": "^29.3.1",
+    "jest-message-util": "^29.3.1",
+    "jest-pnp-resolver": "^1.2.2",
+    "jest-resolve": "^29.3.1",
+    "jest-regex-util": "^29.2.0",
+    "jest-resolve-dependencies": "^29.3.1",
+    "jest-runner": "^29.3.1",
+    "jest": "^29.3.1",
+    "jest-util": "^29.3.1",
+    "jest-runtime": "^29.3.1",
+    "jest-snapshot": "^29.3.1",
+    "jest-validate": "^29.3.1",
+    "jest-worker": "^29.3.1",
+    "js-tokens": "^4.0.0",
+    "jest-watcher": "^29.3.1",
+    "js-yaml": "^3.14.1",
+    "kleur": "^3.0.3",
+    "leven": "^3.1.0",
+    "jsesc": "^2.5.2",
+    "json5": "^2.2.1",
+    "lines-and-columns": "^1.2.4",
+    "locate-path": "^5.0.0",
+    "lodash": "^4.17.21",
+    "lru-cache": "^6.0.0",
+    "make-dir": "^3.1.0",
+    "merge-stream": "^2.0.0",
+    "log-symbols": "^4.1.0",
+    "micromatch": "^4.0.5",
+    "json-parse-even-better-errors": "^2.3.1",
+    "makeerror": "^1.0.12",
+    "ms": "^2.1.2",
+    "natural-compare": "^1.4.0",
+    "mute-stream": "^0.0.8",
+    "mimic-fn": "^2.1.0",
+    "minimatch": "^3.1.2",
+    "node-releases": "^2.0.6",
+    "node-int64": "^0.4.0",
+    "normalize-path": "^3.0.0",
+    "npm-run-path": "^4.0.1",
+    "onetime": "^5.1.2",
+    "os-tmpdir": "^1.0.2",
+    "ora": "^5.4.1",
+    "p-limit": "^3.1.0",
+    "once": "^1.4.0",
+    "p-locate": "^4.1.0",
+    "p-try": "^2.2.0",
+    "parse-json": "^5.2.0",
+    "path-key": "^3.1.1",
+    "path-parse": "^1.0.7",
+    "picocolors": "^1.0.0",
+    "picomatch": "^2.3.1",
+    "pirates": "^4.0.5",
+    "pretty-format": "^29.3.1",
+    "prompts": "^2.4.2",
+    "react-is": "^18.2.0",
+    "path-exists": "^4.0.0",
+    "pkg-dir": "^4.2.0",
+    "readable-stream": "^3.6.0",
+    "path-is-absolute": "^1.0.1",
+    "resolve-cwd": "^3.0.0",
+    "require-directory": "^2.1.1",
+    "resolve": "^1.22.1",
+    "resolve-from": "^5.0.0",
+    "resolve.exports": "^1.1.0",
+    "restore-cursor": "^3.1.0",
+    "rxjs": "^7.5.7",
+    "safer-buffer": "^2.1.2",
+    "run-async": "^2.4.1",
+    "semver": "^6.3.0",
+    "safe-buffer": "^5.2.1",
+    "shebang-regex": "^3.0.0",
+    "shebang-command": "^2.0.0",
+    "signal-exit": "^3.0.7",
+    "source-map": "^0.6.1",
+    "slash": "^3.0.0",
+    "source-map-support": "^0.5.13",
+    "stack-utils": "^2.0.6",
+    "sisteransi": "^1.0.5",
+    "string-length": "^4.0.2",
+    "strip-bom": "^4.0.0",
+    "string-width": "^4.2.3",
+    "strip-ansi": "^6.0.1",
+    "strip-final-newline": "^2.0.0",
+    "strip-json-comments": "^3.1.1",
+    "string_decoder": "^1.3.0",
+    "supports-preserve-symlinks-flag": "^1.0.0",
+    "sprintf-js": "^1.0.3",
+    "supports-color": "^7.2.0",
+    "test-exclude": "^6.0.0",
+    "through": "^2.3.8",
+    "tmp": "^0.0.33",
+    "tmpl": "^1.0.5",
+    "to-fast-properties": "^2.0.0",
+    "to-regex-range": "^5.0.1",
+    "tslib": "^2.4.1",
+    "type-fest": "^0.21.3",
+    "util-deprecate": "^1.0.2",
+    "type-detect": "^4.0.8",
+    "update-browserslist-db": "^1.0.10",
+    "v8-to-istanbul": "^9.0.1",
+    "which": "^2.0.2",
+    "wcwidth": "^1.0.1",
+    "walker": "^1.0.8",
+    "wrap-ansi": "^7.0.0",
+    "write-file-atomic": "^4.0.2",
+    "wrappy": "^1.0.2",
+    "y18n": "^5.0.8",
+    "yallist": "^4.0.0",
+    "yocto-queue": "^0.1.0",
+    "yargs-parser": "^21.1.1",
+    "yargs": "^17.6.2"
+  },
+  "devDependencies": {},
+  "scripts": {
+    "test": "jest"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/bannywalia/teamProfileGenerator.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/bannywalia/teamProfileGenerator/issues"
+  },
+  "homepage": "https://github.com/bannywalia/teamProfileGenerator#readme"
 }
